feat: ajustar locale e melhorias em CurrencyHandler
- adicionar userLocale via properties
- alterar retorno de exists para Boolean
- filtrar moedas existentes em createByCurrencyPair
- corrigir obtenção de código e descrição da moeda